istio/hello-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
  namespace: apps 
spec:
  hosts:
     - 'app1.techguru.net'
  gateways:
  - hello-gw
  http:
    - route:
        - destination:
            host: hello
